[package]
name = "routra"
version = "0.1.0"
edition = "2024"
description = "Routra Rust SDK — OpenAI-compatible client with intelligent GPU cloud routing"
license = "MIT"
repository = "https://github.com/routra-dev/sdk-rust"
keywords = ["routra", "openai", "llm", "gpu", "routing"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
