[package]
name = "routra-sdk"
version = "0.1.1"
edition = "2024"
rust-version = "1.94"
description = "Routra Rust SDK - OpenAI-compatible client with intelligent GPU cloud routing"
license = "MIT"
repository = "https://github.com/routra-dev/sdk-rust"
keywords = ["routra", "openai", "llm", "gpu", "routing"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "multipart"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
bytes = "1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
